<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/FullScreenTheme"
    tools:context=".MainActivity">

    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        style="@style/Theme.AppCompat.DayNight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mapbox_cameraTargetLat="41.2995"
        app:mapbox_cameraTargetLng="69.2401"
        app:mapbox_cameraZoom="9.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/drawerMenuBtn"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_margin="@dimen/_12sdp"
        android:backgroundTint="@color/myColorWhite"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/drawer_icon2" />
    </androidx.cardview.widget.CardView>

    <Button
        style="@style/myLeftButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/cвободен"
        app:layout_constraintEnd_toStartOf="@id/guidlineVertical"
        app:layout_constraintStart_toEndOf="@id/drawerMenuBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/myRightButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/анят"
        app:layout_constraintEnd_toStartOf="@id/notificationBtn"
        app:layout_constraintStart_toEndOf="@id/guidlineVertical"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/notificationBtn"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_margin="@dimen/_12sdp"
        android:backgroundTint="@color/myColorWhite"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/notifications" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/notificationBadge"
        android:layout_width="@dimen/_14sdp"
        android:layout_height="@dimen/_14sdp"
        android:backgroundTint="@color/badgeColor"
        app:cardCornerRadius="@dimen/_7ssp"
        app:layout_constraintEnd_toEndOf="@id/notificationBtn"
        app:layout_constraintTop_toTopOf="@id/notificationBtn">

        <TextView
            android:layout_width="18dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidlineCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidlineVertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:backgroundTint="@color/myColorWhite"
        android:contentDescription="@string/app"
        android:src="@drawable/menu_icon"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidlineCenter"
        app:tint="@color/menuColor" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/plusBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:backgroundTint="@color/myColorWhite"
        android:contentDescription="@string/app"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@id/minusBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="@dimen/_14sdp"
        app:srcCompat="@drawable/plus_icon"
        app:tint="@color/myColorBlack" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/minusBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:backgroundTint="@color/myColorWhite"
        android:contentDescription="@string/app"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@id/borderBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidlineCenter"
        app:maxImageSize="@dimen/_14sdp"
        app:srcCompat="@drawable/minus_icon"
        app:tint="@color/myColorBlack" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/locationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:backgroundTint="@color/myColorWhite"
        android:contentDescription="@string/app"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/minusBtn"
        app:maxImageSize="@dimen/_14sdp"
        app:srcCompat="@drawable/location_icon"
        app:tint="@color/myColorBlack" />

    <androidx.cardview.widget.CardView
        android:id="@+id/orderBtn"
        android:layout_width="@dimen/mainButtonSize"
        android:layout_height="@dimen/mainButtonSize"
        android:layout_margin="@dimen/_6sdp"
        android:contentDescription="@string/app"
        app:cardCornerRadius="@dimen/_22sdp"
        app:layout_constraintBottom_toTopOf="@id/textOrder"
        app:layout_constraintEnd_toStartOf="@id/borderBtn"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            style="@style/mainButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/exchange_icon"
            app:tint="@color/mainIconColor" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/orderBadge"
        android:layout_width="@dimen/_14sdp"
        android:layout_height="@dimen/_14sdp"
        android:backgroundTint="@color/badgeColor"
        app:cardCornerRadius="@dimen/_7ssp"
        app:layout_constraintEnd_toEndOf="@id/orderBtn"
        app:layout_constraintTop_toTopOf="@id/orderBtn">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textOrder"
        style="@style/MediumTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_6sdp"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/borderBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/borderBtn"
        android:layout_width="@dimen/mainButtonSize"
        android:layout_height="@dimen/mainButtonSize"
        android:layout_margin="@dimen/_6sdp"
        android:contentDescription="@string/app"
        app:cardCornerRadius="@dimen/_22sdp"
        app:layout_constraintBottom_toTopOf="@id/textBorder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            style="@style/mainButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/rocket_icon"
            app:tint="@color/mainIconColor" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textBorder"
        style="@style/MediumTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_6sdp"
        android:text="@string/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/rateBtn"
        style="@style/mainButtonStyle"
        android:layout_width="@dimen/mainButtonSize"
        android:layout_height="@dimen/mainButtonSize"
        android:layout_margin="@dimen/_6sdp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/app"
        android:focusable="true"
        app:cardCornerRadius="@dimen/_22sdp"
        app:layout_constraintBottom_toTopOf="@id/textRates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/borderBtn">

        <ImageView
            style="@style/mainButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/tarif_icon"
            app:tint="@color/mainIconColor" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textRates"
        style="@style/MediumTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_6sdp"
        android:text="@string/rates"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/borderBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>